# MemoraBot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/commands/: create_plan.md  generate_project_plan.md  implement_ticket.md
app/: __init__.py  agents.py  config.py  logging.py  main.py  middleware.py  schemas.py  tools.py  utils.py
app/routers/: chat.py  health.py
scripts/: dev.sh  lint.sh  test.sh
specs/: PROJECT_IMPLEMENTATION_PLAN.md  TICKET-001-project-setup.md  TICKET-002-fastapi-application.md  TICKET-003-pydantic-ai-agent.md  TICKET-004-file-tools.md  TICKET-005-chat-ui.md  TICKET-006-intelligent-file-editing.md  TICKET-007-markdown-rendering.md  TICKET-008-file-monitoring-api.md  TICKET-INDEX.md
static/css/: main.css
static/js/: chat.js  main.js
templates/: base.html  chat.html
tests/: test_setup.py
